--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
       </ul>
       <button class="join">Join us</button>
     </div>
-    <sectionc class="hero">
-
+    <section class="whoweare">
+      <div class="hero">
+          <div class="hero-text">
+          <h2>Changing Lifestyles,</h2>
+          <h2>Rewriting Stereotypes...</h2>
+        </div>
+      </div>
+      
     </section>
     <section>
             <div class="video-section">
