--- a/index.html
+++ b/index.html
@@ -14,21 +14,30 @@
     <div class="navigation">
       <img src="./image/AUC Logo .jpeg" alt="auc-logo" class="logo"/>
       <ul class="options">
-        <li><a href="#">Get Involved</a></li>
-        <li><a href="#">What We do</a></li>
+        <li><a href="#whoweare">Who We Are</a></li>
+        <li><a href="#">Impact So Far</a></li>
         <li><a href="#">Stories</a></li>
         <li><a href="#">About Us</a></li>
       </ul>
       <button class="join">Join us</button>
     </div>
-    <section class="whoweare">
+    <section>
       <div class="hero">
           <div class="hero-text">
           <h2>Changing Lifestyles,</h2>
           <h2>Rewriting Stereotypes...</h2>
         </div>
       </div>
-      
+      <div class="whoweare">
+        <img src="./image/tree.png" class="tree"/>
+        <h1 id="#whoweare">Who We Are</h1>
+        <p>A community of really passionate youth led actors ages 18-45 that chose to make change towards the environment, building climate smart communities and brands towards a lifelong sustainable impact</p>
+        <br/>
+        <p>We love to plant trees, educate schools, and make a difference through community based projects.</p>
+        <br/>
+        <p>Our initiative and projects are based on SDGs 4 which stand for quality education, SDGs 11, sustainable cities and communities and SDGs 13 for climate action. 
+          So far, we have impacted over 14000 young people and directly and indirectly in climate action. We have also partnered with the bbc, unesco and other international organizations. </p>
+      </div>
     </section>
     <section>
             <div class="video-section">
@@ -36,4 +45,5 @@
             </div>
     </section>
 </body>
+<footer><a href="https://www.flaticon.com/free-icons/tree" title="tree icons">Tree icon created by Freepik - Flaticon</a></footer>
 </html>
