--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           So far, we have impacted over 14000 young people and directly and indirectly in climate action. We have also partnered with the bbc, unesco and other international organizations. </p>
       </div>
     </section>
+    <section class="impact">
+      <img src="./image/impact.png" class="iimg"/>
+      <button class="partner"><a href="https://www.instagram.com/africaupcyclecommunity/"> Partner With Us To make Change</a></button>
+    </section>
     <section>
             <div class="video-section">
                 <iframe src="https://drive.google.com/file/d/1H7ApZJfsz0XIXZ91MuZulovSeK7Qlv_n/preview" width="auto" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
