--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <ul class="options">
         <li><a href="#whoweare">Who We Are</a></li>
         <li><a href="#">Impact So Far</a></li>
-        <li><a href="#">Stories</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="#">An Upcycling Story</a></li>
+        <li><a href="#">Connect With Us</a></li>
       </ul>
-      <button class="join">Join us</button>
+      <button class="join"><a href="https://forms.gle/qvgS2cCCREiikEvm8">Join Us</a></button>
     </div>
     <section>
       <div class="hero">
@@ -43,11 +43,25 @@
       <img src="./image/impact.png" class="iimg"/>
       <button class="partner"><a href="https://www.instagram.com/africaupcyclecommunity/"> Partner With Us To make Change</a></button>
     </section>
-    <section>
+    <section class="brands">
+      <h3 class="bra">Some Brands We have Worked With</h3>
+        <div>
+        <img src="./image/bbc newsround.jpg" class="brand"/>
+        <img src="./image/german Parliament logo.svg" class="brand"/>
+        <img src="./image/do good logo.png" class="brand"/>
+        <img src="./image/ladi logo.png" class="brand"/>
+        <img src="./image/Flag_of_UNESCO.svg (1).png" class="brand"/>
+        <img src="./image/Flutterwave_Logo .png" class="brand"/>
+        
+        </div>
+    </section>
+    <section class="stories">
+            <h3 class="story">Our Upcycling Story</h3>
             <div class="video-section">
                 <iframe src="https://drive.google.com/file/d/1H7ApZJfsz0XIXZ91MuZulovSeK7Qlv_n/preview" width="auto" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
     </section>
+  
 </body>
-<footer><a href="https://www.flaticon.com/free-icons/tree" title="tree icons">Tree icon created by Freepik - Flaticon</a></footer>
+<footer><a href="https://www.flaticon.com/free-icons/tree" title="tree icons">Icons by - Flaticon</a></footer>
 </html>
