--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
 <title>Africa Upcycle Community</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet"/>
 </head>
 <body>
-    <div class="navigation">
+  <div class="navigation">
+    <div class="navi">
       <img src="./image/AUC Logo .jpeg" alt="auc-logo" class="logo"/>
-      <ul class="options">
-        <li><a href="#whoweare">Who We Are</a></li>
-        <li><a href="#">Impact So Far</a></li>
-        <li><a href="#">An Upcycling Story</a></li>
-        <li><a href="#">Connect With Us</a></li>
-      </ul>
-      <button class="join"><a href="https://forms.gle/qvgS2cCCREiikEvm8">Join Us</a></button>
     </div>
+       <div>
+          <ul class="options">
+            <li><a href="#whoweare">About Us</a></li>
+            <li><a href="#">Impact</a></li>
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Connect</a></li>
+          </ul>
+       </div>
+        <div>
+        <button class="join"><a href="https://forms.gle/qvgS2cCCREiikEvm8">Join Us</a></button>
+        </div>
+      </div>
     <section>
       <div class="hero">
           <div class="hero-text">
@@ -41,27 +46,39 @@
     </section>
     <section class="impact">
       <img src="./image/impact.png" class="iimg"/>
-      <button class="partner"><a href="https://www.instagram.com/africaupcyclecommunity/"> Partner With Us To make Change</a></button>
+      <div class="partner"><a href="https://www.instagram.com/africaupcyclecommunity/"> Partner With Us To make Change</a></div>
     </section>
     <section class="brands">
       <h3 class="bra">Some Brands We have Worked With</h3>
-        <div>
+      <br/>
+        <div class="brand-logo">
         <img src="./image/bbc newsround.jpg" class="brand"/>
         <img src="./image/german Parliament logo.svg" class="brand"/>
-        <img src="./image/do good logo.png" class="brand"/>
+        <img src="./image/do good_logo.png" class="brand"/>
         <img src="./image/ladi logo.png" class="brand"/>
         <img src="./image/Flag_of_UNESCO.svg (1).png" class="brand"/>
-        <img src="./image/Flutterwave_Logo .png" class="brand"/>
-        
+        <img src="./image/Flutterwave_Logo.png" class="brand"/>
         </div>
     </section>
     <section class="stories">
-            <h3 class="story">Our Upcycling Story</h3>
+            <h3 class="story">Community Story</h3>
+            <p></p>
             <div class="video-section">
-                <iframe src="https://drive.google.com/file/d/1H7ApZJfsz0XIXZ91MuZulovSeK7Qlv_n/preview" width="auto" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1H7ApZJfsz0XIXZ91MuZulovSeK7Qlv_n/preview" width="auto" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
             </div>
     </section>
   
 </body>
-<footer><a href="https://www.flaticon.com/free-icons/tree" title="tree icons">Icons by - Flaticon</a></footer>
+<footer>
+  <div class="footer">
+    <img src="./image/instagram.png" class="img">
+    <img src="./image/twitter.png" class="img">
+    <img src="./image/facebook.png"class="img">
+    <img src="./image/youtube.png" class="img">
+  </div>
+    <div class="foot">
+      <h4>&copy; Africa Upcycle 2025</h4>
+      <a href="https://www.flaticon.com/free-icons/tree" title="tree icons">Icons by - Flaticon</a>
+    </div>
+</footer>
 </html>
