resposiveness and footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
 </head>
 <body>
   <div class="navigation">
@@ -17,13 +18,13 @@
        <div>
           <ul class="options">
             <li><a href="#whoweare">About Us</a></li>
-            <li><a href="#">Impact</a></li>
-            <li><a href="#">Our Story</a></li>
-            <li><a href="#">Connect</a></li>
+            <li><a href="#impact">Impact</a></li>
+            <li><a href="#story">Our Story</a></li>
+            <li><a href="#footer">Connect</a></li>
           </ul>
        </div>
         <div>
-        <button class="join"><a href="https://forms.gle/qvgS2cCCREiikEvm8">Join Us</a></button>
+        <button class="join"><a href="https://forms.gle/qvgS2cCCREiikEvm8">Join Our Team</a></button>
         </div>
       </div>
     <section>
@@ -33,9 +34,9 @@
           <h2>Rewriting Stereotypes...</h2>
         </div>
       </div>
-      <div class="whoweare">
+      <div class="whoweare" id="whoweare">
         <img src="./image/tree.png" class="tree"/>
-        <h1 id="#whoweare">Who We Are</h1>
+        <h1>Who We Are</h1>
         <p>A community of really passionate youth led actors ages 18-45 that chose to make change towards the environment, building climate smart communities and brands towards a lifelong sustainable impact</p>
         <br/>
         <p>We love to plant trees, educate schools, and make a difference through community based projects.</p>
@@ -44,7 +45,7 @@
           So far, we have impacted over 14000 young people and directly and indirectly in climate action. We have also partnered with the bbc, unesco and other international organizations. </p>
       </div>
     </section>
-    <section class="impact">
+    <section class="impact" id="impact">
       <img src="./image/impact.png" class="iimg"/>
       <div class="partner"><a href="https://www.instagram.com/africaupcyclecommunity/"> Partner With Us To make Change</a></div>
     </section>
@@ -60,7 +61,7 @@
         <img src="./image/Flutterwave_Logo.png" class="brand"/>
         </div>
     </section>
-    <section class="stories">
+    <section class="stories" id="story">
             <h3 class="story">Community Story</h3>
             <p></p>
             <div class="video-section">
@@ -70,12 +71,14 @@
   
 </body>
 <footer>
-  <div class="footer">
-    <img src="./image/instagram.png" class="img">
-    <img src="./image/twitter.png" class="img">
-    <img src="./image/facebook.png"class="img">
-    <img src="./image/youtube.png" class="img">
+  <div class="footer" id="footer">
+    <a href="https://www.facebook.com/africaupcyclecommunity/"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://www.instagram.com/africaupcyclecommunity/"><i class="fa-brands fa-square-instagram"></i></a>
+    <a href="https://x.com/africaupcycleC"><i class="fa-brands fa-square-x-twitter"></i></a>
+    <a href="https://www.youtube.com/channel/UCxbJUkqMeqvOyw5JpBBacbQ"><i class="fa-brands fa-youtube"></i></a>
+    
   </div>
+  <h4 class="email">Email: africaupcyclecommunity@gmail.com</h4>
     <div class="foot">
       <h4>&copy; Africa Upcycle 2025</h4>
       <a href="https://www.flaticon.com/free-icons/tree" title="tree icons">Icons by - Flaticon</a>
