partner-link updated

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
     <section class="impact" id="impact">
       <img src="./image/impact.png" class="iimg"/>
-      <div class="partner"><a href="https://www.instagram.com/africaupcyclecommunity/"> Partner With Us To make Change</a></div>
+      <div class="partner"><a href="https://forms.gle/ZyLY2sNGtPh3j9Ea7"> Partner With Us To make Change</a></div>
     </section>
     <section class="brands">
       <h3 class="bra">Some Brands We have Worked With</h3>
