Register to Join

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </ul>
        </div>
         <div>
-        <button class="join"><a href="https://forms.gle/qvgS2cCCREiikEvm8">Join Our Team</a></button>
+        <button class="join"><a href="https://forms.gle/SHGrGipunXnousfP7">Join Our Team</a></button>
         </div>
       </div>
     <section>
